test/conformance/chainsaw/mutating-policies/existing/different-trigger-target-original-request/configmap-fake.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: not-central-config
data:
  serverAddress: http://server-fake.example.com:9090
