test/conformance/chainsaw/mutating-policies/existing/different-trigger-target-original-request/configmap-updated-2.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: central-config
data:
  serverAddress: http://server-updated-2.example.com:9090
