test/conformance/chainsaw/mutating-policies/existing/different-trigger-target-original-request/configmap-updated.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: central-config
data:
  serverAddress: http://server-updated.example.com:9090
