test/conformance/chainsaw/mutating-policies/existing/different-trigger-target-original-request/configmap.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: central-config
data:
  serverAddress: http://server-initial.example.com:9090
