test/conformance/chainsaw/mutating-policies/existing/different-trigger-target-original-request/dependent-configmap-no-opt-in.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: dependent-configmap-no-opt-in
data:
  serverAddress: http://local-server.example.com:9090
  myKey: myValue
