test/conformance/chainsaw/mutating-policies/existing/different-trigger-target-original-request/dependent-configmap-assert-updated.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: dependent-configmap
data:
  serverAddress: http://server-updated.example.com:9090
  myKey: myValue
